# agentrules-architect

./: .coverage  .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SNAPSHOT.md  conftest.py  main.py  pyproject.toml  pyright-report-2025-10-31.txt  pytest.ini  requirements.txt
.agent/: PLANS.md
.agent/exec_plans/: registry.json
.agent/templates/: MILESTONE_TEMPLATE.md
.cursor/commands/: review.md
.cursor/rules/: phase-2-docs.mdc  phase-3-docs.mdc  tavily-search-tool.mdc
.github/workflows/: publish-pypi.yml  release-please.yml  release.yml  validate-uv-lock.yml
agentrules/: SNAPSHOT.md  __init__.py  analyzer.py  cli.py  config_service.py  logging_setup.py  model_config.py
agentrules/cli/: app.py  context.py
config/: SNAPSHOT.md  agents.py  tools.py
config/prompts/: final_analysis_prompt.py  phase_1_prompts.py
core/: SNAPSHOT.md
core/agent_tools/: tool_manager.py
core/agents/: SNAPSHOT.md  __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py
core/analysis/: final_analysis.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_5.py
core/types/: __init__.py  models.py  tool_config.py
core/utils/: constants.py  model_config_helper.py  offline.py
docs/: claude-code-runtime.md  codex-runtime.md  provider-model-lifecycle.md  provider-system-prompts.md  structured-output-contracts.md
phases_output/: final_analysis.md  metrics.md  phase1_discovery.md  phase2_planning.md  phase3_analysis.md  phase4_synthesis.md  phase5_consolidation.md
src/agentrules/: SNAPSHOT.md  analyzer.py  config_service.py
tests/: SNAPSHOT.md  __init__.py  test_cli_services.py  test_openai_responses.py  test_smoke_discovery.py
tests/fakes/: codex_app_server.py  vendor_responses.py
tests/final_analysis_test/: __init__.py  run_test.py  test_date.py  test_final_analysis.py  test_final_offline.py
tests/live/: test_claude_code_live_smoke.py  test_codex_live_smoke.py  test_live_smoke.py  test_provider_model_live_smoke.py
tests/offline/: __init__.py  test_offline_smoke.py
tests/phase_1_test/: __init__.py  run_test.py  test_phase1_offline.py  test_phase1_profile_agents.py  test_phase1_researcher_guards.py
tests/phase_2_test/: __init__.py  run_test.py  test_phase2_offline.py
tests/phase_3_test/: __init__.py  debug_parser.py  run_test.py  test_phase3_offline.py
tests/phase_4_test/: __init__.py  run_test.py  test_phase4_offline.py
tests/phase_5_test/: __init__.py  run_test.py  test_phase5_offline.py
tests/tests_input/: AGENTS.md
tests/unit/: test_agent_parser_basic.py  test_agent_scaffold.py  test_agents_anthropic_parse.py  test_agents_deepseek.py  test_agents_gemini_error.py  test_agents_openai_params.py  test_analysis_view.py  test_clean_agentrules.py  test_cli.py  test_cli_claude_code_settings.py  test_cli_codex_settings.py  test_cli_model_picker_ui.py  test_codex_runtime_service.py  test_config_service.py  test_execplan_cli.py  test_execplan_creator.py  test_execplan_identity.py  test_execplan_milestone_cli.py  test_execplan_milestones.py  test_execplan_paths.py  test_execplan_registry.py  test_execplan_registry_cli.py  test_file_retriever.py  test_model_config_helper.py  test_model_overrides.py  test_output_validation.py  test_phase_events.py  test_phase_prompt_separation.py  test_phases_edges.py  test_phases_output.py  test_pipeline_orchestrator.py  test_pipeline_output_writer.py  test_pipeline_snapshot.py  test_project_profile.py  test_release_metadata.py  (+7 more)
(+314 files in other folders)
